--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@daveyplate/better-auth-ui": "^2.1.6",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
